--- a/src/theme.css
+++ b/src/theme.css
@@ -13,10 +13,12 @@ html {
     --nimiq-gray:       #F4F4F4;
     --nimiq-light-gray: #FAFAFA;
 
-    --nimiq-light-blue-hover: #0071C3; /* rgb(5, 130, 202) */
-    --nimiq-green-hover:      #1C9A88; /* rgb(33, 188, 165) */
-    --nimiq-orange-hover:     #FC7500; /* rgb(252, 135, 2) */
-    --nimiq-red-hover:        #C62D2D; /* rgb(216, 65, 51) */
+    /* Nimiq main colors darkened (hover states) */
+    --nimiq-blue-darkened:       #151833; /* rgb(5, 130, 202) */
+    --nimiq-light-blue-darkened: #0071C3; /* rgb(5, 130, 202) */
+    --nimiq-green-darkened:      #20B29E; /* rgb(33, 188, 165) */
+    --nimiq-orange-darkened:     #FC7500; /* rgb(252, 135, 2) */
+    --nimiq-red-darkened:        #D13030; /* rgb(216, 65, 51) */
     
     /* Background gradients */
     --nimiq-blue-bg:       radial-gradient(circle at bottom right, #260133, var(--nimiq-blue));
@@ -30,6 +32,12 @@ html {
     --nimiq-light-green-bg:radial-gradient(circle at bottom right, #70B069, var(--nimiq-light-green));
     --nimiq-brown-bg:      radial-gradient(circle at bottom right, #724147, var(--nimiq-brown));
 
+    /* Background gradients darkened (hover states) */
+    --nimiq-blue-bg-darkened:       radial-gradient(circle at bottom right, #180021, var(--nimiq-blue-darkened));
+    --nimiq-light-blue-bg-darkened: radial-gradient(circle at bottom right, #2355C4, var(--nimiq-light-blue-darkened));
+    --nimiq-green-bg-darkened:      radial-gradient(circle at bottom right, #3D9988, var(--nimiq-green-darkened));
+    --nimiq-orange-bg-darkened:     radial-gradient(circle at bottom right, #EA5200, var(--nimiq-orange-darkened));
+    --nimiq-red-bg-darkened:        radial-gradient(circle at bottom right, #BF2D46, var(--nimiq-red-darkened));
 
     /* Special colors */
     --nimiq-highlight-bg: rgba(31, 35, 72, 0.06); /* Based on Nimiq Blue */
