Add pill buttons and shadows

--- a/src/buttons.css
+++ b/src/buttons.css
@@ -28,7 +28,7 @@
     font-family: inherit;
 }
 
-.nq-button:not([disabled]):before {
+.nq-button:not([disabled])::before {
     content: "";
     position: absolute;
     left: 0;
@@ -48,9 +48,9 @@
     transform: translate3D(0,-2px,0);
 }
 
-.nq-button:hover:before,
-.nq-button:active:before,
-.nq-button:focus:before {
+.nq-button:hover::before,
+.nq-button:active::before,
+.nq-button:focus::before {
     opacity: 1;
 }
 
@@ -61,7 +61,8 @@
     transition: transform 200ms cubic-bezier(.41,.34,.26,1.55), box-shadow 200ms cubic-bezier(.41,.34,.26,1.55) !important;
 }
 
-.nq-button-s {
+.nq-button-s,
+.nq-button-pill {
     display: inline-block;
     font-size: 1.75rem;
     line-height: 2rem;
@@ -85,7 +86,8 @@
     cursor: not-allowed;
 }
 
-.nq-button-s::after {
+.nq-button-s::before,
+.nq-button-pill::before {
     content: '';
     display: block;
     position: absolute;
@@ -99,11 +101,24 @@
 .nq-button-s:active,
 .nq-button-s:focus {
     color: var(--nimiq-blue-darkened);
-    background-color: rgba(31, 35, 72, 0.12); /* Based on Nimiq Blue */
+    background: rgba(31, 35, 72, 0.12); /* Based on Nimiq Blue */
 }
 
 .nq-button-s[disabled]:hover {
-    background-color: rgba(31, 35, 72, 0.07); /* Based on Nimiq Blue */
+    background: rgba(31, 35, 72, 0.07); /* Based on Nimiq Blue */
+}
+
+.nq-button-pill {
+    color: white;
+    background: var(--nimiq-blue);
+    background-image: var(--nimiq-blue-bg);
+}
+
+.nq-button-pill:hover,
+.nq-button-pill:active,
+.nq-button-pill:focus {
+    background: var(--nimiq-blue-darkened);
+    background-image: var(--nimiq-blue-bg-darkened);
 }
 
 /* Color variations */
@@ -114,7 +129,7 @@
     background-image: var(--nimiq-light-blue-bg);
 }
 
-.nq-button.light-blue:before {
+.nq-button.light-blue::before {
     background-image: var(--nimiq-light-blue-bg-darkened);
 }
 
@@ -125,24 +140,36 @@
 .nq-button.light-blue.inverse:hover,
 .nq-button.light-blue.inverse:active,
 .nq-button.light-blue.inverse:focus {
-    color: var(--nimiq-light-blue-darkened); 
+    color: var(--nimiq-light-blue-darkened);
 }
 
 .nq-button-s.light-blue {
     color: var(--nimiq-light-blue);
-    background-color: rgba(5, 130, 202, 0.1); /* Based on Nimiq Light Blue */
+    background: rgba(5, 130, 202, 0.1); /* Based on Nimiq Light Blue */
 }
 
 .nq-button-s.light-blue:hover,
 .nq-button-s.light-blue:active,
 .nq-button-s.light-blue:focus {
     color: var(--nimiq-light-blue-darkened);
-    background-color: rgba(5, 130, 202, 0.2); /* Based on Nimiq Light Blue */
+    background: rgba(5, 130, 202, 0.2); /* Based on Nimiq Light Blue */
 }
 
 .nq-button-s.light-blue[disabled]:hover {
     color: var(--nimiq-light-blue);
-    background-color: rgba(5, 130, 202, 0.1); /* Based on Nimiq Light Blue */
+    background: rgba(5, 130, 202, 0.1); /* Based on Nimiq Light Blue */
+}
+
+.nq-button-pill.light-blue {
+    background: var(--nimiq-light-blue);
+    background-image: var(--nimiq-light-blue-bg);
+}
+
+.nq-button-pill.light-blue:hover,
+.nq-button-pill.light-blue:active,
+.nq-button-pill.light-blue:focus {
+    background: var(--nimiq-light-blue-darkened);
+    background-image: var(--nimiq-light-blue-bg-darkened);
 }
 
 /* green */
@@ -151,7 +178,7 @@
     background-image: var(--nimiq-green-bg);
 }
 
-.nq-button.green:before {
+.nq-button.green::before {
     background-image: var(--nimiq-green-bg-darkened);
 }
 
@@ -162,24 +189,36 @@
 .nq-button.green.inverse:hover,
 .nq-button.green.inverse:active,
 .nq-button.green.inverse:focus {
-    color: var(--nimiq-green-darkened); 
+    color: var(--nimiq-green-darkened);
 }
 
 .nq-button-s.green {
     color: var(--nimiq-green);
-    background-color: rgba(33, 188, 165, 0.1); /* Based on Nimiq Green */
+    background: rgba(33, 188, 165, 0.1); /* Based on Nimiq Green */
 }
 
 .nq-button-s.green:hover,
 .nq-button-s.green:active,
 .nq-button-s.green:focus {
     color: var(--nimiq-green-darkened);
-    background-color: rgba(33, 188, 165, 0.2); /* Based on Nimiq Green */
+    background: rgba(33, 188, 165, 0.2); /* Based on Nimiq Green */
 }
 
 .nq-button-s.green[disabled]:hover {
     color: var(--nimiq-green);
-    background-color: rgba(33, 188, 165, 0.1); /* Based on Nimiq Green */
+    background: rgba(33, 188, 165, 0.1); /* Based on Nimiq Green */
+}
+
+.nq-button-pill.green {
+    background: var(--nimiq-green);
+    background-image: var(--nimiq-green-bg);
+}
+
+.nq-button-pill.green:hover,
+.nq-button-pill.green:active,
+.nq-button-pill.green:focus {
+    background: var(--nimiq-green-darkened);
+    background-image: var(--nimiq-green-bg-darkened);
 }
 
 /* orange */
@@ -188,7 +227,7 @@
     background-image: var(--nimiq-orange-bg);
 }
 
-.nq-button.orange:before {
+.nq-button.orange::before {
     background-image: var(--nimiq-orange-bg-darkened);
 }
 
@@ -199,24 +238,36 @@
 .nq-button.orange.inverse:hover,
 .nq-button.orange.inverse:active,
 .nq-button.orange.inverse:focus {
-    color: var(--nimiq-orange-darkened); 
+    color: var(--nimiq-orange-darkened);
 }
 
 .nq-button-s.orange {
     color: var(--nimiq-orange);
-    background-color: rgba(252, 135, 2, 0.1); /* Based on Nimiq Orange */
+    background: rgba(252, 135, 2, 0.1); /* Based on Nimiq Orange */
 }
 
 .nq-button-s.orange:hover,
 .nq-button-s.orange:active,
 .nq-button-s.orange:focus {
     color: var(--nimiq-orange-darkened);
-    background-color: rgba(252, 135, 2, 0.2); /* Based on Nimiq Orange */
+    background: rgba(252, 135, 2, 0.2); /* Based on Nimiq Orange */
 }
 
 .nq-button-s.orange[disabled]:hover {
     color: var(--nimiq-orange);
-    background-color: rgba(252, 135, 2, 0.1); /* Based on Nimiq Orange */
+    background: rgba(252, 135, 2, 0.1); /* Based on Nimiq Orange */
+}
+
+.nq-button-pill.orange {
+    background: var(--nimiq-orange);
+    background-image: var(--nimiq-orange-bg);
+}
+
+.nq-button-pill.orange:hover,
+.nq-button-pill.orange:active,
+.nq-button-pill.orange:focus {
+    background: var(--nimiq-orange-darkened);
+    background-image: var(--nimiq-orange-bg-darkened);
 }
 
 /* red */
@@ -225,7 +276,7 @@
     background-image: var(--nimiq-red-bg);
 }
 
-.nq-button.red:before {
+.nq-button.red::before {
     background: var(--nimiq-red-bg-darkened);
 }
 
@@ -236,24 +287,36 @@
 .nq-button.red.inverse:hover,
 .nq-button.red.inverse:active,
 .nq-button.red.inverse:focus {
-    color: var(--nimiq-red-darkened); 
+    color: var(--nimiq-red-darkened);
 }
 
 .nq-button-s.red {
     color: var(--nimiq-red);
-    background-color: rgba(216, 65, 51, 0.1); /* Based on Nimiq Red */
+    background: rgba(216, 65, 51, 0.1); /* Based on Nimiq Red */
 }
 
 .nq-button-s.red:hover,
 .nq-button-s.red:active,
 .nq-button-s.red:focus {
     color: var(--nimiq-red-darkened);
-    background-color: rgba(216, 65, 51, 0.2); /* Based on Nimiq Red */
+    background: rgba(216, 65, 51, 0.2); /* Based on Nimiq Red */
 }
 
 .nq-button-s.red[disabled]:hover {
     color: var(--nimiq-red);
-    background-color: rgba(216, 65, 51, 0.1); /* Based on Nimiq Red */
+    background: rgba(216, 65, 51, 0.1); /* Based on Nimiq Red */
+}
+
+.nq-button-pill.red {
+    background: var(--nimiq-red);
+    background-image: var(--nimiq-red-bg);
+}
+
+.nq-button-pill.red:hover,
+.nq-button-pill.red:active,
+.nq-button-pill.red:focus {
+    background: var(--nimiq-red-darkened);
+    background-image: var(--nimiq-red-bg-darkened);
 }
 
 /* Special styles */
@@ -264,8 +327,19 @@
     transition: transform 450ms cubic-bezier(0.25, 0, 0, 1), box-shadow 450ms cubic-bezier(0.25, 0, 0, 1), color 300ms cubic-bezier(0.25, 0, 0, 1);
 }
 
-.nq-button.inverse:before {
+.nq-button.inverse::before {
     background: #EFF0F2; /* Indigo 7% */
+}
+
+.nq-button-s.inverse {
+    background: rgba(255, 255, 255, 0.2);
+    color: white;
+}
+
+.nq-button-s.inverse:hover,
+.nq-button-s.inverse:focus,
+.nq-button-s.inverse:active {
+    background: rgba(255, 255, 255, 0.25);
 }
 
 .nq-button[disabled] {
@@ -290,8 +364,9 @@
 
 /* Focus Ring for Tabs – can be optimized in the future with better :focus-visible support */
 
-.nq-button:after,
-.nq-button-s:before {
+.nq-button::after,
+.nq-button-s::after,
+.nq-button-pill::after {
     content: "";
     position: absolute;
     left: -5px;
@@ -303,16 +378,20 @@
     opacity: 0;
 }
 
-.nq-button.inverse:after {
+.nq-button.inverse::after,
+.nq-button-s.inverse::after,
+.nq-button-pill.inverse::after {
     border-color: rgba(255,255,255,0.4);
 }
 
 .nq-button:focus,
-.nq-button-s:focus {
+.nq-button-s:focus,
+.nq-button-pill:focus {
     outline: none;
 }
 
-.nq-button:focus:after,
-.nq-button-s:focus:before {
+.nq-button:focus::after,
+.nq-button-s:focus::after,
+.nq-button-pill:focus::after {
     opacity: 1;
 }
