--- a/src/layout.css
+++ b/src/layout.css
@@ -127,3 +127,13 @@ body {
 .margin-top-1 {
     margin-top: 1rem;
 }
+
+/* Shadow */
+
+.nq-shadow {
+    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15);
+}
+
+.nq-shadow-l {
+    box-shadow: 0 0.5rem 2.5rem rgba(0, 0, 0, 0.15);
+}
