--- a/src/buttons.css
+++ b/src/buttons.css
@@ -337,24 +337,19 @@
 .nq-button.gold.inverse:hover,
 .nq-button.gold.inverse:active,
 .nq-button.gold.inverse:focus {
-    color: var(--nimiq-gold-darkened); 
-}
-
-.nq-button-s.gold {
-    color: var(--nimiq-gold);
-    background-color: rgba(252, 135, 2, 0.1); /* Based on Nimiq Orange */
-}
-
-.nq-button-s.gold:hover,
-.nq-button-s.gold:active,
-.nq-button-s.gold:focus {
     color: var(--nimiq-gold-darkened);
-    background-color: rgba(252, 135, 2, 0.2); /* Based on Nimiq Orange */
 }
 
-.nq-button-s.gold[disabled]:hover {
-    color: var(--nimiq-gold);
-    background-color: rgba(252, 135, 2, 0.1); /* Based on Nimiq Orange */
+.nq-button-pill.gold {
+    background: var(--nimiq-gold);
+    background-image: var(--nimiq-gold-bg);
+}
+
+.nq-button-pill.gold:hover,
+.nq-button-pill.gold:active,
+.nq-button-pill.gold:focus {
+    background: var(--nimiq-gold-darkened);
+    background-image: var(--nimiq-gold-bg-darkened);
 }
 
 /* Special styles */
