--- a/src/buttons.css
+++ b/src/buttons.css
@@ -28,6 +28,12 @@
     font-family: inherit;
 }
 
+a.nq-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .nq-button:not([disabled])::before {
     content: "";
     position: absolute;
@@ -65,7 +71,7 @@
 .nq-button-pill {
     display: inline-block;
     font-size: 1.75rem;
-    line-height: 2rem;
+    line-height: 3.375rem;
     height: 3.375rem;
     text-decoration: none;
     font-weight: bold;
