--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,5 @@
 /*!
-Nimiq Style CSS Framework v0.7.4
+Nimiq Style CSS Framework v0.7.5
 URL: https://github.com/nimiq/nimiq-style
 Styleguide: https://nimiq.com/styleguide
 */
@@ -13,6 +13,7 @@ Styleguide: https://nimiq.com/styleguide
 @import 'icons.css';
 
 html {
+    /* Transitions */
     --nimiq-ease: cubic-bezier(0.25, 0, 0, 1);
 }
 
