--- a/src/dark-adaptions.css
+++ b/src/dark-adaptions.css
@@ -6,21 +6,13 @@
 .nq-green-bg,
 .nq-orange-bg,
 .nq-red-bg,
-.nq-purple-bg,
-.nq-pink-bg,
-.nq-light-green-bg,
-.nq-brown-bg,
 
 .nq-blue-bg .nq-link,
 .nq-light-blue-bg .nq-link,
 .nq-gold-bg .nq-link,
 .nq-green-bg .nq-link,
 .nq-orange-bg .nq-link,
-.nq-red-bg .nq-link,
-.nq-purple-bg .nq-link,
-.nq-pink-bg .nq-link,
-.nq-light-green-bg .nq-link,
-.nq-brown-bg .nq-link {
+.nq-red-bg .nq-link {
     color: var(--nimiq-white);
 }
 
@@ -30,21 +22,13 @@
 .nq-green-bg .nq-text,
 .nq-orange-bg .nq-text,
 .nq-red-bg .nq-text,
-.nq-purple-bg .nq-text,
-.nq-pink-bg .nq-text,
-.nq-light-green-bg .nq-text,
-.nq-brown-bg .nq-text,
 
 .nq-blue-bg .nq-label,
 .nq-light-blue-bg .nq-label,
 .nq-gold-bg .nq-label,
 .nq-green-bg .nq-label,
 .nq-orange-bg .nq-label,
-.nq-red-bg .nq-label,
-.nq-purple-bg .nq-label,
-.nq-pink-bg .nq-label,
-.nq-light-green-bg .nq-label,
-.nq-brown-bg .nq-label {
+.nq-red-bg .nq-label {
     color: rgba(255, 255, 255, 0.7);
 }
 
