--- a/src/inputs.css
+++ b/src/inputs.css
@@ -1,38 +1,53 @@
-.nq-input {
+.nq-input,
+.nq-input-s {
     font-family: inherit;
     font-size: inherit;
     font-weight: inherit;
-    padding: 1rem 2rem;
-    border: solid 2px rgba(31, 35, 72, 0.1); /* Based on Nimiq Blue */
+    padding: 1.25rem 2.25rem;
+    border: none;
+    --border-color: rgba(31, 35, 72, 0.1); /* Based on Nimiq Blue */
+    box-shadow: inset 0 0 0 0.25rem var(--border-color);
     color: var(--nimiq-blue);
     background: transparent;
     border-radius: 0.5rem;
     outline: none;
-    transition: color .2s ease, border .2s ease;
+    transition: color .2s ease, box-shadow .2s ease;
     background-clip: padding-box; /* Remove top inset box shadow in iOS */
 }
 
-.nq-input.vanishing {
-    /* Cannot use transparent because of iOS */
-    border-color: rgba(31, 35, 72, 0); /* Based on Nimiq Blue */
+.nq-input-s {
+    padding: 0.6875rem 1.4375rem;
+    box-shadow: inset 0 0 0 0.1875rem var(--border-color); /* 1.5px */
 }
 
-.nq-input::placeholder {
+.nq-input.vanishing,
+.nq-input-s.vanishing {
+    /* Cannot use transparent because of iOS */
+    --border-color: rgba(31, 35, 72, 0); /* Based on Nimiq Blue */
+}
+
+.nq-input::placeholder,
+.nq-input-s::placeholder {
     color: rgba(31, 35, 72, 0.5); /* Based on Nimiq Blue */
 }
 
-.nq-input:hover {
-    border-color: rgba(31, 35, 72, 0.14); /* Based on Nimiq Blue */
+.nq-input:hover,
+.nq-input-s:hover {
+    --border-color: rgba(31, 35, 72, 0.14); /* Based on Nimiq Blue */
 }
 
 .nq-input:hover::placeholder,
-.nq-input:focus::placeholder {
+.nq-input:focus::placeholder,
+.nq-input-s:hover::placeholder,
+.nq-input-s:focus::placeholder {
     color: rgba(5, 130, 202, 0.7); /* Based on Nimiq Light Blue */
 }
 
 .nq-input:focus,
-.nq-input.vanishing:focus {
-    border-color: rgba(5, 130, 202, 0.2); /* Based on Nimiq Light Blue */
+.nq-input.vanishing:focus,
+.nq-input-s:focus,
+.nq-input-s.vanishing:focus {
+    --border-color: rgba(5, 130, 202, 0.2); /* Based on Nimiq Light Blue */
     color: var(--nimiq-light-blue);
 }
 
