add cursor:pointer to .nq-link
make sure links look clickable (cursor) even if they don't have a href

--- a/src/typography.css
+++ b/src/typography.css
@@ -87,6 +87,7 @@ body {
 .nq-style a {
     color: var(--nimiq-light-blue);
     text-decoration: none;
+    cursor: pointer;
 }
 
 .nq-link:active,
