Change background gradients to 100% 100% from ellipse

--- a/src/buttons.css
+++ b/src/buttons.css
@@ -421,7 +421,7 @@ a.nq-button {
 .nq-button.inverse::after,
 .nq-button-s.inverse::after,
 .nq-button-pill.inverse::after {
-    border-color: rgba(255,255,255,0.4);
+    border-color: rgba(255, 255, 255, 0.4);
 }
 
 .nq-button:focus,
