Start implementing automatic dark mode
- Adds support for body, links, paragraphs, labels, buttons, inputs and cards

--- a/src/main.css
+++ b/src/main.css
@@ -11,6 +11,7 @@ Styleguide: https://nimiq.com/styleguide
 @import 'theme.css';
 @import 'dark-adaptions.css';
 @import 'icons.css';
+@import 'auto-dark.css';
 
 html {
     /* Transitions */
