--- a/src/theme.css
+++ b/src/theme.css
@@ -1,5 +1,6 @@
 html {
     /* Nimiq color palette */
+    --nimiq-dark-blue:  #12142b; /* rgb(18, 20, 43) */
     --nimiq-blue:       #1F2348; /* rgb(31, 35, 72) */
     --nimiq-light-blue: #0582CA; /* rgb(5, 130, 202) */
     --nimiq-gold:       #E9B213; /* rgb(233, 178, 19) */
